2007-11-06  Mathias Hasselmann  <mathias@openismus.com>

	Rename EpcAvahiShell to EpcShell.

	* libepc/dispatcher.c, libepc/publisher.c, libepc/shell.c,
	libepc/shell.h, Makefile.am, tests/framework.c:
	Rename EpcAvahiShell to EpcShell.

2007-11-06  Mathias Hasselmann  <mathias@openismus.com>

	Permit access when no authentication handler is installed.

	* libepc/publisher.c: Let epc_publisher_server_auth_cb return TRUE,
	when no authentication handler is found to permit access in that case.

2007-11-06  Mathias Hasselmann  <mathias@openismus.com>

	Announce program name based service type.

	* libepc/publisher.c: Announce program name based service type.
	* libepc/dispatcher.c: Move commit step into idle function.
	* libepc/avahi-shell.c, libepc/avahi-shell.h:
	Provide epc_avahi_shell_create_service_type for creating
	program name based service types.

2007-11-06  Mathias Hasselmann  <mathias@openismus.com>

	Introduce common API for managing basic, shareable Avahi infrastructure.

	* libepc/avahi-shell.c, libepc/avahi-shell.h: Introduce EpcAvahiShell.
	* libepc/dispatcher.c, tests/framework.c: Use EpcAvahiShell.
	* Makefile.am: Add libepc/avahi-shell.c and libepc/avahi-shell.h.

2007-11-05  Mathias Hasselmann  <mathias@openismus.com>

	Merge password dialog from the libank experiment.

	* libepc-ui/passworddialog.c, libepc-ui/passworddialog.h:
	Merge password dialog from the libank experiment.
	* examples/test-consumer.c: Use EpcPasswordDialog.
	* configure.in, Makefile.am, libepc-ui.pc.in, libepc-ui/.gitignore:
	Add shared libepc-ui library containing libepc specific widgets.
	* libepc.pc.in: Correct the cflags property.
	* tests/.gitignore: Add *.loT

2007-11-05  Mathias Hasselmann  <mathias@openismus.com>

	Document authentication mechanism and add "reauthenticate" signal.

	* docs/reference/libepc/libepc-sections.txt, libepc/publisher.c,
	libepc/publisher.h: Document authentication mechanism.
	* libepc/consumer.c: Document authentication mechanism